<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btnMenu"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/stroke_light_green"
        tools:srcCompat="@drawable/icon_girl" />

    <ImageView
        android:id="@+id/btnCategory"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/stroke_light_green"
        tools:srcCompat="@drawable/icon_category" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:text="Hi Nermeen \nKeep Going"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/stroke_light_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome">

        <ImageView
            android:id="@+id/btnSearch"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt"
            tools:srcCompat="@drawable/icon_search" />

        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:text="Search for your mood"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/btnFilter"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginEnd="21dp"
        android:padding="16dp"
        android:background="@drawable/stroke_light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat"
        tools:srcCompat="@drawable/icon_filter" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:text="Categories for you"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategory1"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/stroke_light_green"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/mini_categories1"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/categories1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategory2"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/stroke_light_green"
            android:backgroundTint="@null"
            android:drawableTop="@drawable/mini_categories1"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/categories2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategory3"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/stroke_light_green"
            android:backgroundTint="@null"
            android:drawableTop="@drawable/mini_categories1"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/categories3"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategory4"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:background="@drawable/stroke_light_green"
            android:backgroundTint="@null"
            android:drawableTop="@drawable/mini_categories1"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/categories4"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtFeatured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/featured"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFeatured"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_training_type" />

</androidx.constraintlayout.widget.ConstraintLayout>